--- a/README.Rmd
+++ b/README.Rmd
@@ -5,22 +5,23 @@ output: md_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(BMDK)
+library(magrittr)
 ```
 
 # BMDK - Biomarker Discovery Kit
 
 ```{r main code}
-dat <- read_bmdk(system.file('extdata', 'BMDK_test.txt', package = 'BMDK')) %>%
-    normalize_bmdk()
+dat <- read_bmdk(system.file('extdata', 'BMDK_test.txt', package = 'BMDK')) #%>%
+    #normalize_bmdk()
 
 #scale/normalize data
 # scale each feature in (0,1]
 
-#dat <-
-#select(dat, -sid, -case) %>% # deal with sid and case
-#apply?
-dat <- apply(dat, 2, function(.x){.x / max(.x)}) # watch for NAs
+dat$feat <- apply(dat$feat, 2, function(.x){.x / max(.x, na.rm = TRUE)})
 
 # look for outliers
 
+
+# impute missing values if desired
 ```
