--- a/README.Rmd
+++ b/README.Rmd
@@ -46,4 +46,10 @@ for(i in 1:ncol(dat$feat))
     # Two Sample t-test
     tresults[i] <- t.test(dat$feat[dat$case == 1,i], dat$feat[dat$case == 0,i])[[3]]
 }
+
+# Identify a unique list of the top features from both tests
+topfeatures <- unique(c(colnames(dat$feat)[order(wresults)[1:10]], colnames(dat$feat)[order(tresults)[1:10]]))
+
+# Run the list of top features through a Pearson Correlation
+featurecorrelations <- cor(dat$feat[ ,topfeatures], method = "pearson")
 ```
