--- a/README.Rmd
+++ b/README.Rmd
@@ -15,50 +15,10 @@ library(OutlierDetection)
 ```{r main code}
 
 dat <- read_bmdk(system.file('extdata', 'BMDK_train.txt', package = 'BMDK')) %>%
-    detectOutliers_bmdk() #%>%
-    filter_bmdk() #%>%
-    # pickFeatures_bmdk() %>%
+    detectOutliers_bmdk() %>%
+    filter_bmdk() %>%
+    pickFeatures_bmdk() #%>%
+    # buildClassifer_bmdk() %>%
     # validate_bmdk()
-
-# Keep them in the test set
-
-# Impute missing values if desired
-
-# Run the list of top features through a Pearson Correlation
-# Store the Pearson Correlation coefficients in corrcalculations
-corrcalculations <- cor(dat$feat[ ,topfeatures], method = "pearson")
-
-# Identify any features with a high correlation (0.8 <= r < 1.0)
-corrfeatures <- which(corrcalculations >= 0.1 & corrcalculations < 1.0, arr.ind = T)
-
-if (length(corrfeatures) > 0)
-{
-  # If highly correlated features are identified, retrieve those feature names
-  # Each row in corrfeaturepairs contains the names of a pair of correlated features
-  corrfeaturepairs <- matrix(c(rownames(corrcalculations[corrfeatures[,1], corrfeatures[,2]]),
-                        colnames(corrcalculations[corrfeatures[,1], corrfeatures[,2]])), 
-                        nrow = nrow(corrfeatures), ncol = ncol(corrfeatures))
-
-
-  for (i in nrow(corrfeaturepairs))
-  {
-      if(corrfeaturepairs[i,1] %in% topfeatures &
-         corrfeaturepairs[i,2] %in% topfeatures)
-      {
-      
-            # For each pair of features, identify which has a smaller mean value in the original data
-        #### NEED TO USE THE ORIGINAL UNNORMALIZED DATA FOR THIS, FIX ###
-            featuremaxes <- c(mean(dat$feat[,corrfeaturepairs[i,1]]),
-                              mean(dat$feat[,corrfeaturepairs[i,2]]))
-    
-            minfeature <- min(featuremaxes)
-    
-            # Throw out the feature in topfeatures that has the smaller mean value
-            topfeatures <- topfeatures[-match(corrfeaturepairs[i, match(minfeature,
-                                                                        featuremaxes)],
-                                              topfeatures)]
-      }
-  }
-}
 
 ```
