Added information gain
Added Information Gain test to dtgini() NOTE: there is a bug in the info gain test

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,8 @@ library(OutlierDetection)
 
 dat <- read_bmdk(system.file('extdata', 'BMDK_train.txt', package = 'BMDK')) %>%
     detectOutliers_bmdk() %>%
-    filter_bmdk() %>%
-    pickFeatures_bmdk() #%>%
+    filter_bmdk() #%>%
+    #pickFeatures_bmdk() #%>%
     # buildClassifer_bmdk() %>%
     # validate_bmdk()
 
