Updated Outlier Detection Method
Outlier Detection method has been updated from a KNN bootstrapping method to a KNN method paired with identifying samples 3 std from the mean.

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,9 @@ output: md_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(BMDK)
+#library(BMDK)
 library(magrittr)
-library(OutlierDetection)
+library(kknn)
 ```
 
 # BMDK - Biomarker Discovery Kit
