Rcpp Updates and knn() testing
Updated the Rcpp affiliated files and updated one of the knn() tests

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,10 +5,8 @@ output: md_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-#library(BMDK)
-library(magrittr)
-library(Rcpp)
-compileAttributes()
+library(BMDK)
+#library(magrittr)
 ```
 
 # BMDK - Biomarker Discovery Kit
