Extreme and Fisher Filters
Added the extreme() filter to filter_bmdk() and associated tests. Added fisher.test() filter to filter_bmdk().

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,8 @@ output: md_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(BMDK)
-#library(magrittr)
+library(magrittr)
+library(rpart)
 ```
 
 # BMDK - Biomarker Discovery Kit
