More Updated Documentation
Updated pickFeatures_bmdk() documentation, and included buildClassifier_bmdk() in the README file.

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,8 +19,8 @@ dat <- read_bmdk(system.file('extdata', 'BMDK_train.txt', package = 'BMDK')) %>%
     detectOutliers_bmdk() %>%
     filter_bmdk() %>%
     pickFeatures_bmdk() %>%
-    removeFeatures_bmdk() #%>%
-    # buildClassifer_bmdk() %>%
+    removeFeatures_bmdk() %>%
+    buildClassifer_bmdk() #%>%
     # validate_bmdk()
 
 ```
